--- a/RemoteClient/wwwroot/index.html
+++ b/RemoteClient/wwwroot/index.html
@@ -9,7 +9,7 @@
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="RemoteClient.styles.css" rel="stylesheet" />
+    <link href="ab-log-rc.styles.css" rel="stylesheet" />
 </head>
 
 <body>
